<resources>
    <string name="app_name">UTRACKER</string>
    <string name="google_API">AIzaSyBu6hEuLj-w5K9cLJM8GMzSNSBwt2LWZhk</string>
    <string name="error_map_requests">You can\'t make map requests</string>
    <string name="api_weather" translatable="false">81563cd3bac22f754c322457ddf5a825</string>

    <!--  Main Menu -->
    <string name="btn_history">HISTORY</string>
    <string name="btn_start">START\nWORKOUT</string>
    <string name="btn_weather">WEATHER</string>
    <string name="btn_goals">TROPHIES</string>
    <string name="btn_analytics">ANALYTICS</string>

    <!-- Weather -->
    <string name="sunrise">SUNRISE</string>
    <string name="sunset">SUNSET</string>
    <string name="humidity">HUMIDITY</string>
    <string name="wind">WIND</string>
    <string name="cloudiness">CLOUDINESS</string>
    <string name="pressure">PRESSURE</string>
    <string name="max_temp">Max Temp: </string>
    <string name="min_temp">Min Temp: </string>
    <string name="unit_hpa" translatable="false">hPa</string>


    <!-- Workout  -->
    <string name="btn_process_start">START</string>
    <string name="btn_process_stop">STOP</string>
    <string name="cancelled">Workout Cancelled</string>
    <string name="dialog_title">Are you sure?</string>
    <string name="dialog_subtitle">Pressing \"YES\" will stop your workout and take you to the main menu</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="tv_currSpeed">CURRENT SPEED </string>
    <string name="tv_distance">CURRENT DISTANCE </string>
    <string name="tv_goal">GOAL</string>
    <string name="no_goal">NO GOAL</string>

    <!-- Workout Set Up Dialog -->
    <string name="workout_dialog_type">CHOOSE YOUR ACTIVITY TYPE</string>
    <string name="workout_dialog_run">RUN</string>
    <string name="workout_dialog_walk">WALK</string>
    <string name="workout_dialog_mixed">MIXED</string>
    <string name="workout_dialog_tvGoal">100</string>
    <string name="workout_dialog_tvGoalUnit">METERS</string>
    <string name="workout_dialog_noteHint">Any note? E.g. Run in the park</string>
    <string name="workout_dialog_noGoal">No goal?</string>
    <string name="workout_dialog_btn_ready">READY</string>
    <string name="note_run">Running workout selected, please try to stay above 3m/s</string>
    <string name="note_walk">Walking workout selected, please try to stay below 3m/s</string>
    <string name="note_mixed">Mixed workout selected, you can change between walking and running during your session</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus">-</string>
    <string name="workout_dialog_goal">YOUR GOAL</string>
    <string name="minimum_goal">100 meters is a minimum goal</string>
    <string name="not_ready">Activity type has to be selected</string>

    <!-- Database -->
    <string name="dbName">utracker</string>

    <!-- History -->
    <string name="go_back">BACK TO MAIN</string>
    <string name="lv" translatable="false">List View</string>
    <string name="timeLimit">I think you forgot to turn off the workout?</string>
    <string name="date">Date:</string>
    <string name="speed">Average Speed:</string>
    <string name="unit_ms">m/s</string>
    <string name="distance">Distance: </string>
    <string name="unit_m">meters</string>
    <string name="unit_s">seconds</string>
    <string name="note">Note:</string>
    <string name="goal">Goal:</string>
    <string name="viewMore">View More</string>
    <string name="duration">Duriation:</string>
    <string name="btn_ok">OK</string>


    <!-- History Dialog -->
    <string name="history_dialog_distance">DISTANCE</string>
    <string name="history_dialog_duration">DURATION</string>
    <string name="history_dialog_goal">GOAL</string>
    <string name="history_dialog_avgSpeed">AVERAGE SPEED</string>
    <string name="enabled_et">You can now change your note</string>
    <string name="history_dialog_note">NOTE:</string>
    <string name="note_changed">New note saved!</string>

    <!-- ERROR CODES -->
    <string name="WEATHER_THROWABLE_ERROR">Unable to retrieve error message! Check throwable object</string>
    <string name="PERMISSION_NOT_GRANTED">Please check application permissions</string>

    <string name="future_work_goals">This feature is not yet implemented</string>


    <!-- Ananlytics -->
    <string name="analytics_title_AllTime">ALL TIME</string>
    <string name="analytics_title_ThisWeek">THIS WEEK</string>
    <string name="analytics_title_ThisMonth">THIS MONTH</string>
    <string name="total_duration">DURATION</string>
    <string name="total_distance">DISTANCE</string>
    <string name="total_avgSpeed">AVERAGE SPEED</string>
    <string name="total_longestDistance">LONGEST RUN (DISTANCE)</string>
    <string name="total_longestDuration">LONGEST RUN (DURATION)</string>
    <string name="analytics_unit_meter">m</string>
    <string name="analytics_unit_metersecond">m/s</string>
    <string name="analytics_unit_second">s</string>

    <!-- Achievements Title -->
    <string name="achievements_title">ACHIEVEMENTS</string>
    <string name="MARATHON_BRONZE">Run more than 100 meters at once</string>
    <string name="MARATHON_SILVER">Run more than 300 meters at once</string>
    <string name="MARATHON_GOLD">Run more than 500 meters at once</string>
    <string name="RUNNER_BRONZE">Run 10km in total</string>
    <string name="RUNNER_SILVER">Run 20km in total</string>
    <string name="RUNNER_GOLD">Run 50km in total</string>
    <string name="ENDURANCE_BRONZE">Run 300 meters with average speed 9m/s or above</string>
    <string name="ENDURANCE_SILVER">Run 500 meters with average speed 9m/s or above</string>
    <string name="ENDURANCE_GOLD">Run 1000 meters with average speed 9m/s or above</string>
    <string name="TIMEMASTER_BRONZE">Run for 1 minute without stopping</string>
    <string name="TIMEMASTER_SILVER">Run for 5 minute without stopping</string>
    <string name="TIMEMASTER_GOLD">Run for 10 minute without stopping</string>
</resources>
