<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actvities.MainActivity"
    android:background="@color/backgroundColor"
    app:elevation="10dp"
    >

    <TextView
        style="@style/Widget.UTracker.TextView"
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/app_name"

        android:textAlignment="center"
        android:textSize="50sp"
        />

    <com.richpath.RichPathView
        android:id="@+id/path_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:vector="@drawable/menu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        style="@style/Widget.UTracker.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_analytics"
        android:textSize="25sp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="@id/path_view"
        app:layout_constraintRight_toRightOf="@id/path_view"
        android:text="@string/btn_analytics"
        />

    <TextView
        style="@style/Widget.UTracker.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_history"
        android:textSize="25sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="@id/path_view"
        app:layout_constraintLeft_toLeftOf="@id/path_view"
        android:text="@string/btn_history"
        />

    <TextView
        style="@style/Widget.UTracker.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_goals"
        android:textSize="25sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="@id/path_view"
        app:layout_constraintLeft_toLeftOf="@id/path_view"
        android:text="@string/btn_goals"
        />

    <TextView
        style="@style/Widget.UTracker.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_weather"
        android:textSize="25sp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="@id/path_view"
        app:layout_constraintRight_toRightOf="@id/path_view"
        android:text="@string/btn_weather"
        />

    <TextView
        style="@style/Widget.UTracker.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_start"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/btn_start"
        android:textAlignment="center"
        />




</androidx.constraintlayout.widget.ConstraintLayout>