<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actvities.StartWorkout"
    android:background="@color/colorPrimaryDark"
    app:elevation="10dp"
    >

    <TextView
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/workout_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/workout_dialog_type"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textAlignment="center"/>


    <LinearLayout
        android:id="@+id/buttons_container"
        app:layout_constraintTop_toBottomOf="@+id/workout_dialog_title"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">


        <LinearLayout
            android:id="@+id/workout_dialog_btn_run"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="10dp"
            android:background="@color/item_selector_color">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/run"
                android:tint="@color/orange"
                />

            <TextView
                android:id="@+id/test"
                android:paddingTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:text="@string/workout_dialog_run"/>
        </LinearLayout>



        <LinearLayout
            android:id="@+id/workout_dialog_btn_walk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="10dp"
            android:background="@color/item_selector_color">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/walk"
                android:tint="@color/yellow"
                />


            <TextView
                android:paddingTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:text="@string/workout_dialog_walk"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/workout_dialog_btn_mix"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@color/item_selector_color">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/mixed"
                android:tint="@color/blue"
                />


            <TextView
                android:id="@+id/container_lowest_point"
                android:paddingTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:text="@string/workout_dialog_mixed"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/note_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttons_container">

        <TextView
            android:id="@+id/workout_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            />
    </LinearLayout>


    <TextView
        android:id="@+id/goal_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/workout_dialog_goal"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/workout_dialog_goal"
        />

    <TextView
        android:id="@+id/workout_dialog_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="30sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
    />

    <TextView
        android:id="@+id/unit_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/unit_m"
        app:layout_constraintTop_toBottomOf="@id/workout_dialog_goal"
        />


    <Button
        android:id="@+id/remove_more_goal"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAlignment="center"
        android:text="@string/minus"
        android:layout_marginStart="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/add_more_goal"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAlignment="center"
        android:text="@string/plus"
        android:layout_marginEnd="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />



        <EditText
            android:id="@+id/editTextNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:maxLines="1"
            android:hint="@string/workout_dialog_noteHint"
            android:background="@color/white"
            android:textColor="@color/backgroundColor"
            android:textColorHint="@color/hint_color"
            android:padding="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@id/add_more_goal"
           />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/no_goal_swtich"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTextNote"
        app:layout_constraintLeft_toLeftOf="@+id/editTextNote"
        android:layout_marginTop="20dp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/no_goal_swtich"
        app:layout_constraintBottom_toBottomOf="@+id/no_goal_swtich"
        app:layout_constraintLeft_toRightOf="@+id/no_goal_swtich"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/workout_dialog_noGoal"
        />

    <Button
        android:id="@+id/btn_ready"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/workout_dialog_btn_ready"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        />






</androidx.constraintlayout.widget.ConstraintLayout>