<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actvities.History"
    android:background="@drawable/card_dialog_bg"
    app:elevation="10dp"
    >

    <TextView
        android:id="@+id/history_dialog_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="20sp"
        />

    <LinearLayout
        android:id="@+id/history_dialog_buttons_container1"
        app:layout_constraintTop_toBottomOf="@+id/history_dialog_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp">


        <LinearLayout
            android:id="@+id/history_dialog_button_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="10dp"
            android:background="@color/item_selector_color">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/run"
                android:tint="@color/orange"
                />

            <TextView
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:text="@string/history_dialog_distance"/>

            <TextView
                android:id="@+id/history_dialog_distance"
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/white" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/history_dialog_button_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:clickable="true"
            android:focusable="true"

            android:background="@color/item_selector_color">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/flag"
                android:tint="@color/colorAccent"
                />

            <TextView
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:text="@string/history_dialog_goal"/>

            <TextView
                android:id="@+id/history_dialog_goal"
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/history_dialog_buttons_container2"
        app:layout_constraintTop_toBottomOf="@+id/history_dialog_buttons_container1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp">


        <LinearLayout
            android:id="@+id/history_dialog_button_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="10dp"
            android:background="@color/item_selector_color">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/speed"
                android:tint="@color/yellow"
                />

            <TextView
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:text="@string/history_dialog_avgSpeed"/>

            <TextView
                android:id="@+id/history_dialog_avgSpeed"
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/white" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/history_dialog_button_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@color/item_selector_color">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/time"
                android:tint="@color/blue" />

            <TextView
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:text="@string/history_dialog_duration"/>

            <TextView
                android:id="@+id/history_dialog_duration"
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_dialog_note"
        app:layout_constraintBottom_toTopOf="@+id/history_dialog_etNote"
        app:layout_constraintLeft_toLeftOf="@+id/btn_ready"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        />

    <EditText
        android:id="@+id/history_dialog_etNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/btn_editText"
        app:layout_constraintLeft_toLeftOf="@+id/btn_ready"
        app:layout_constraintRight_toLeftOf="@+id/btn_editText"
        android:textColor="@color/white"
        android:imeOptions="actionDone"
        android:layout_marginEnd="15dp"
        android:textColorHint="@color/hint_color"
        android:singleLine="true"
        android:maxLines="1"
        android:padding="5dp"
        android:inputType="none"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_editText"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:src="@drawable/edit_note"
        android:tint="@color/white"
        android:background="@color/purple"
        app:layout_constraintRight_toRightOf="@+id/btn_ready"
        app:layout_constraintBottom_toTopOf="@id/btn_ready"
        app:layout_constraintTop_toTopOf="@+id/history_dialog_etNote"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btn_ready"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/btn_ok"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:layout_marginBottom="5dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>